# bear-market-analysis

./: README.md  all_bear_dates.py  bear_dates_data.xlsx  bear_dates_playground.ipynb  pyproject.toml
